syntax = "proto3";
package hellowrapper;
option go_package = "github.com/go-leo/gors/example/api/hellowrapper;hellowrapper";
import "google/protobuf/any.proto";

// @GORS @Path(/v1/wrapper)
service Greeter {
  // @GORS @POST @Path(/ProtoBufBinding/ProtoBufRender) @ProtoBufBinding @ProtoBufRender
  rpc POSTProtoBufBindingProtoBufRender (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/ProtoJSONBinding/ProtoJSONRender) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTProtoJSONBindingProtoJSONRender (HelloRequest) returns (HelloReply) {}

  rpc NotDefine (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/Error) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTError (HelloRequest) returns (HelloReply) {}

  // @GORS @POST @Path(/GRPCStatus) @ProtoJSONBinding @ProtoJSONRender
  rpc POSTGRPCStatus (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  double salary = 3;
  string Token = 4;
}

message HelloReply {
  string message = 1;
}

message CommonReply {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}